--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native-stack": "^6.9.23",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.5",
@@ -19,7 +22,11 @@
     "react-native-document-picker": "^9.1.1",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-crop-picker": "^0.40.3",
-    "react-native-reanimated": "^3.8.0"
+    "react-native-reanimated": "^3.8.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
