--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=pdf-parser.keystore
+MYAPP_UPLOAD_KEY_ALIAS=pdf-parser-alias
+MYAPP_UPLOAD_STORE_PASSWORD=239738416
+MYAPP_UPLOAD_KEY_PASSWORD=239738416
